# qai

./: .editorconfig  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: CLAUDE.md  settings.json
.claude/agents/: build-error-resolver.md  code-reviewer.md  security-reviewer.md
.claude/doc/: ui-design-guide.md
.claude/rules/: architecture.md  code-review-strategy.md  database.md  dev-workflow.md  git-workflow.md  i18n.md  performance.md  react-patterns.md  (+7 more)
doc/: backend-review.md  database-design.md  refactoring-log.md  ui-design-guide.md  ux-review.md  钉钉飞书集体抛弃 MCP，CLI 才是 Agent 的终局.html
scripts/: import-all-e2e.py  import-e2e.sql
src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_request.rs
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/ai/: claude.rs  mod.rs  parser.rs  prompts.rs
src-tauri/src/commands/: ai_cmd.rs  assertion_cmd.rs  claude_cmd.rs  collection_cmd.rs  env_cmd.rs  import_cmd.rs  item_cmd.rs  mod.rs  pty_cmd.rs  request_cmd.rs  runner_cmd.rs
src-tauri/src/commands/claude_cmd/: mod.rs  process.rs  session.rs  summary.rs
src-tauri/src/db/: assertion.rs  collection.rs  environment.rs  execution.rs  group.rs  init.rs  item.rs  mod.rs  request.rs
src-tauri/src/http/: client.rs  curl.rs  mod.rs  request_builder.rs  response.rs  stream.rs  vars.rs
src-tauri/src/import/: mod.rs  postman.rs  yaml.rs
src-tauri/src/mcp/: handlers.rs  main.rs  protocol.rs  server.rs  tools.rs
src-tauri/src/models/: assertion.rs  collection.rs  environment.rs  execution.rs  group.rs  item.rs  mod.rs  request.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/report/: html.rs
src-tauri/src/runner/: assertion.rs  batch.rs  chain.rs  mod.rs  orchestrator.rs
src-tauri/src/runner/assertion/: compare.rs  evaluators.rs  json_path.rs  mod.rs
src-tauri/src/websocket/: client.rs
src-tauri/tests/: db_integration.rs
(+123 files in other folders)
