[package]
name = "qai"
version = "0.1.0"
description = "QAI - AI-Powered API Testing Tool"
authors = ["zs"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "qai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "gzip", "brotli", "deflate", "zstd"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
anyhow = "1"
regex = "1"
