[package]
name = "qai"
version = "0.1.1"
description = "QAI - AI-Powered API Testing Tool"
authors = ["zs"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "qai"

[lib]
name = "qai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "qai-mcp"
path = "src/mcp/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "gzip", "brotli", "deflate", "zstd", "multipart"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
anyhow = "1"
regex = "1"
portable-pty = "0.9.0"
base64 = "0.22.1"
libc = "0.2.183"
serde_yaml = "0.9"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
